--- a/Resources/Views/ViewControllers/AddPublicationViewController.xib
+++ b/Resources/Views/ViewControllers/AddPublicationViewController.xib
@@ -60,7 +60,9 @@
 						</object>
 						<bool key="IBUIClearsOnBeginEditing">YES</bool>
 						<float key="IBUIMinimumFontSize">1.700000e+01</float>
-						<object class="IBUITextInputTraits" key="IBUITextInputTraits"/>
+						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<int key="IBUIAutocorrectionType">1</int>
+						</object>
 					</object>
 					<object class="IBUILabel" id="209163255">
 						<reference key="NSNextResponder" ref="191373211"/>
